Fix: Fixed issues with hero image rendering on mobile device by removing 'fixed' value from hero container property. Added details regarding fix to readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h4 {
 /* ----------------------------------------- Hero */
 
 .hero-container {
-    background: url("../images/hero.webp") no-repeat top center fixed;
+    background: url("../images/hero.webp") no-repeat top center;
     height: 100vh;
     background-size: cover;
     -webkit-background-size: cover;
